# superlists

./: .gitignore  db.sqlite3  pyproject.toml
database/: db.sqlite3
deploy_tools/: fabfile.py  gunicorn-systemd.template.service  nginx.template.conf  provisioning_notes.md
functional_tests/: base.py  test_layout_and_styling.py  test_list_item_validation.py  test_simple_list_creation.py  tests.py
lists/: forms.py  models.py  urls.py  views.py
lists/migrations/: 0005_list_item_unique_together.py
lists/templates/: base.html  home.html  list.html
lists/tests/: test_forms.py  test_models.py  test_views.py
superlists/: functional_tests.py  settings.py  urls.py
superlists/functional_tests/: tests.py
superlists/lists/: tests.py  urls.py  views.py
superlists/lists/migrations/: 0001_initial.py  0002_item_text.py  0003_list.py  0004_item_list.py
superlists/lists/templates/: base.html  home.html  list.html
superlists/superlists/: settings.py  urls.py
